wire_bridge/build/log/idf_py_stderr_output_74610
Command: make -j 6 all
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c: In function 'display_init':
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:132:10: error: 'lvgl_port_display_cfg_t' has no member named 'offset_x'
  132 |         .offset_x = 0,
      |          ^~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:133:10: error: 'lvgl_port_display_cfg_t' has no member named 'offset_y'
  133 |         .offset_y = 80,
      |          ^~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:133:21: error: initialization of 'void (*)(lv_area_t *)' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  133 |         .offset_y = 80,
      |                     ^~
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:133:21: note: (near initialization for 'disp_cfg.rounder_cb')
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:120:46: error: missing braces around initializer [-Werror=missing-braces]
  120 |     const lvgl_port_display_cfg_t disp_cfg = {
      |                                              ^
......
  132 |         .offset_x = 0,
      |                     {}
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:135:21: error: initialized field overwritten [-Werror=override-init]
  135 |         .rotation = {
      |                     ^
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:135:21: note: (near initialization for 'disp_cfg.rotation')
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:120:46: error: missing braces around initializer [-Werror=missing-braces]
  120 |     const lvgl_port_display_cfg_t disp_cfg = {
      |                                              ^
......
  132 |         .offset_x = 0,
      |                     {}
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:120:46: error: missing braces around initializer [-Werror=missing-braces]
  120 |     const lvgl_port_display_cfg_t disp_cfg = {
      |                                              ^
......
  132 |         .offset_x = 0,
      |                     {}
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/display_status.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
